force-app/main/default/objects/Compliance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account Compliance Documents are associated with</description>
    <inlineHelpText>Account Compliance Documents are associated with</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Compliance_Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>