force-app/main/default/objects/Compliance__c/fields/Acquisition_Merger_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Merger_Survey_Link__c</fullName>
    <description>Link for mail merge to create unique Acquisition/Merger survey to go out with Census Verification emails</description>
    <inlineHelpText>Link for mail merge to create unique Acquisition/Merger survey to go out with Census Verification emails</inlineHelpText>
    <label>Acquisition Merger Survey Link</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>