force-app/main/default/objects/Compliance__c/fields/Administrative_service_providers_8f__c.field-meta.xml
<CustomField>
    <fullName>Administrative_service_providers_8f__c</fullName>
    <description>Administrative services providers (salaries, fees, commissions)</description>
    <inlineHelpText>Administrative services providers (salaries, fees, commissions)</inlineHelpText>
    <label>Administrative Service Providers (8f)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>