force-app/main/default/objects/Compliance__c/fields/ADP_ACP_Testing_for_Non_HCE_15c__c.field-meta.xml
<CustomField>
    <fullName>ADP_ACP_Testing_for_Non_HCE_15c__c</fullName>
    <description>If the ADP/ACP test is used, did the 401(k) plan perform ADP/ACP testing for the plan year using the &quot;current year testing method&quot; for nonhighly compensated employees (Treas. Reg sections 1.401(k)-2(a)(2)(ii) and 1.401(m)- 2(a)(2)(ii))?</description>
    <inlineHelpText>If the ADP/ACP test is used, did the 401(k) plan perform ADP/ACP testing for the plan year using the &quot;current year testing method&quot; for nonhighly compensated employees (Treas. Reg sections 1.401(k)-2(a)(2)(ii) and 1.401(m)- 2(a)(2)(ii))?</inlineHelpText>
    <label>ADP/ACP Testing for Non HCE (15c)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>