force-app/main/default/objects/Compliance__c/fields/Advisor_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Email_2__c</fullName>
    <label>Advisor Email 2</label>
    <type>Email</type>
</CustomField>