force-app/main/default/objects/Compliance__c/fields/Advisor_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Email_3__c</fullName>
    <label>Advisor Email 3</label>
    <type>Email</type>
</CustomField>