force-app/main/default/objects/Compliance__c/fields/Advisor_Email_4__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Email_4__c</fullName>
    <label>Advisor Email 4</label>
    <type>Email</type>
</CustomField>