force-app/main/default/objects/Compliance__c/fields/Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Email__c</fullName>
    <description>Callie requested new field to track advisor emails for failed adp/acp testing notices</description>
    <label>Advisor Email</label>
    <type>Email</type>
</CustomField>