force-app/main/default/objects/Compliance__c/fields/Amended_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Amended_Return_Date__c</fullName>
    <description>Used for auto-email send</description>
    <label>Amended Return Date</label>
    <type>Date</type>
</CustomField>