force-app/main/default/objects/Compliance__c/fields/AmendedInd__c.field-meta.xml
<CustomField>
    <fullName>AmendedInd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amended filing</description>
    <label>AmendedInd</label>
    <type>Checkbox</type>
</CustomField>