force-app/main/default/objects/Compliance__c/fields/Amount_of_Loans_at_Year_End_10g_part_2__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Loans_at_Year_End_10g_part_2__c</fullName>
    <description>If the answer to 10g was &apos;Yes&apos;, please enter the loan amount as of year end.</description>
    <inlineHelpText>If the answer to 10g was &apos;Yes&apos;, please enter the loan amount as of year end.</inlineHelpText>
    <label>Amount of Loans at Year End (10g part 2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>