force-app/main/default/objects/Compliance__c/fields/ASC_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>ASC_URL_Link__c</fullName>
    <label>ASC URL Link</label>
    <type>Url</type>
</CustomField>