force-app/main/default/objects/Compliance__c/fields/ASC_URL_Link_Final__c.field-meta.xml
<CustomField>
    <fullName>ASC_URL_Link_Final__c</fullName>
    <description>ASC URL for Final Year 5500</description>
    <inlineHelpText>ASC URL for Final Year 5500</inlineHelpText>
    <label>ASC URL Link_Final</label>
    <type>Url</type>
</CustomField>