force-app/main/default/objects/Compliance__c/fields/Attributable_Match__c.field-meta.xml
<CustomField>
    <fullName>Attributable_Match__c</fullName>
    <description>Dollar amount of attributable match</description>
    <inlineHelpText>Dollar amount of attributable match</inlineHelpText>
    <label>Attributable Match</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>