force-app/main/default/objects/Compliance__c/fields/Attributable_Match_Processed__c.field-meta.xml
<CustomField>
    <fullName>Attributable_Match_Processed__c</fullName>
    <label>Attributable Match Processed</label>
    <type>Date</type>
</CustomField>