force-app/main/default/objects/Compliance__c/fields/Audit_Package_Box_Link__c.field-meta.xml
<CustomField>
    <fullName>Audit_Package_Box_Link__c</fullName>
    <label>Audit Package Box Link</label>
    <type>Url</type>
</CustomField>