force-app/main/default/objects/Compliance__c/fields/Audit_Package_Sent__c.field-meta.xml
<CustomField>
    <fullName>Audit_Package_Sent__c</fullName>
    <label>Audit Package Sent</label>
    <type>Date</type>
</CustomField>