force-app/main/default/objects/Compliance__c/fields/Auditor_Email__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Email__c</fullName>
    <label>Auditor Email</label>
    <type>Email</type>
</CustomField>