force-app/main/default/objects/Compliance__c/fields/Auditor_Info__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Info__c</fullName>
    <label>Auditor Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>