force-app/main/default/objects/Compliance__c/fields/Benefits_commissions_paid_10e__c.field-meta.xml
<CustomField>
    <fullName>Benefits_commissions_paid_10e__c</fullName>
    <description>Were any fees or commissions paid to any brokers, agents, or other persons by an insurance carrier, insurance service, or other organization that provides some or all of the benefits under the plan?</description>
    <inlineHelpText>Were any fees or commissions paid to any brokers, agents, or other persons by an insurance carrier, insurance service, or other organization that provides some or all of the benefits under the plan?</inlineHelpText>
    <label>Benefits Commissions Paid (10e)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>