force-app/main/default/objects/Compliance__c/fields/Benefits_paid__c.field-meta.xml
<CustomField>
    <fullName>Benefits_paid__c</fullName>
    <description>Benefits paid (including direct rollovers and insurance premiums to provide benefits)</description>
    <inlineHelpText>Benefits paid (including direct rollovers and insurance premiums to provide benefits)</inlineHelpText>
    <label>Benefits Paid (8d)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>