force-app/main/default/objects/Compliance__c/fields/Blackout_period_10h__c.field-meta.xml
<CustomField>
    <fullName>Blackout_period_10h__c</fullName>
    <description>If this is an individual account plan, was there a blackout period?</description>
    <inlineHelpText>If this is an individual account plan, was there a blackout period?</inlineHelpText>
    <label>Blackout period (10h)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>