force-app/main/default/objects/Compliance__c/fields/Business_Code_NAICS__c.field-meta.xml
<CustomField>
    <fullName>Business_Code_NAICS__c</fullName>
    <formula>Plan__r.NAICS_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Code (NAICS)</label>
    <type>Text</type>
</CustomField>