force-app/main/default/objects/Compliance__c/fields/Census_Last_Received__c.field-meta.xml
<CustomField>
    <fullName>Census_Last_Received__c</fullName>
    <description>Date Census was last received.</description>
    <inlineHelpText>Date Census was last received.</inlineHelpText>
    <label>Census Last Received</label>
    <type>Date</type>
</CustomField>