force-app/main/default/objects/Compliance__c/fields/Census_Verification_Email_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Census_Verification_Email_Reminder__c</fullName>
    <description>Entering a date will send the ADP/ACP Census Verification email</description>
    <inlineHelpText>Entering a date will send the ADP/ACP Census Verification email</inlineHelpText>
    <label>Census Verification Email Reminder</label>
    <type>Date</type>
</CustomField>