force-app/main/default/objects/Compliance__c/fields/Census_Verification_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Census_Verification_Email_Sent__c</fullName>
    <description>Date census verification instructions were sent via email</description>
    <inlineHelpText>Date census verification instructions were sent via email</inlineHelpText>
    <label>Census Verification Email Sent</label>
    <type>Date</type>
</CustomField>