force-app/main/default/objects/Compliance__c/fields/Client_Success_Team__c.field-meta.xml
<CustomField>
    <fullName>Client_Success_Team__c</fullName>
    <formula>TEXT(Plan__r.CST_Client_Support_Team__c)</formula>
    <label>Client Success Team</label>
    <type>Text</type>
</CustomField>