force-app/main/default/objects/Compliance__c/fields/Confirmation_ID__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_ID__c</fullName>
    <label>Confirmation ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>