force-app/main/default/objects/Compliance__c/fields/Confirmation_ID_Final__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_ID_Final__c</fullName>
    <description>Confirmation ID for Final Year 5500</description>
    <inlineHelpText>Confirmation ID for Final Year 5500</inlineHelpText>
    <label>Confirmation ID_Final</label>
    <length>30</length>
    <type>Text</type>
</CustomField>