force-app/main/default/objects/Compliance__c/fields/Contextual_Currency__c.field-meta.xml
<CustomField>
    <fullName>Contextual_Currency__c</fullName>
    <description>For auto emails</description>
    <label>Contextual Currency</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>