force-app/main/default/objects/Compliance__c/fields/Contextual_Date__c.field-meta.xml
<CustomField>
    <fullName>Contextual_Date__c</fullName>
    <description>For automated emails - date to be included in body of email that isn&apos;t covered by existing fields</description>
    <label>Contextual Date</label>
    <type>Date</type>
</CustomField>