force-app/main/default/objects/Compliance__c/fields/Contributions_rcvd_from_employers_8a1__c.field-meta.xml
<CustomField>
    <fullName>Contributions_rcvd_from_employers_8a1__c</fullName>
    <description>Contributions received or receivable from employers</description>
    <inlineHelpText>Contributions received or receivable from employers</inlineHelpText>
    <label>Contributions Rcvd From Employers (8a1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>