force-app/main/default/objects/Compliance__c/fields/Contributions_rcvd_from_others_8a3__c.field-meta.xml
<CustomField>
    <fullName>Contributions_rcvd_from_others_8a3__c</fullName>
    <description>Contributions received or receivable from others (including rollovers)</description>
    <inlineHelpText>Contributions received or receivable from others (including rollovers)</inlineHelpText>
    <label>Contributions Rcvd From Others (8a3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>