force-app/main/default/objects/Compliance__c/fields/Contributions_rcvd_from_ppts_8a2__c.field-meta.xml
<CustomField>
    <fullName>Contributions_rcvd_from_ppts_8a2__c</fullName>
    <description>Contributions received or receivable from participants</description>
    <inlineHelpText>Contributions received or receivable from participants</inlineHelpText>
    <label>Contributions Rcvd From Ppts (8a2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>