force-app/main/default/objects/Compliance__c/fields/Correction_Method_Selected__c.field-meta.xml
<CustomField>
    <fullName>Correction_Method_Selected__c</fullName>
    <description>Method Client has selected to to fix testing results.</description>
    <inlineHelpText>Method Client has selected to to fix testing results.</inlineHelpText>
    <label>Correction Method Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Deemed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>4%SHNE</fullName>
            </value>
            <value>
                <fullName>QNEC</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>QNEC Funded</fullName>
                <isActive>false</isActive>
                <label>QNEC Funded</label>
            </value>
            <value>
                <fullName>QNEC Requested</fullName>
                <isActive>false</isActive>
                <label>QNEC Requested</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>