force-app/main/default/objects/Compliance__c/fields/Corrective_Distribution_Match__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Distribution_Match__c</fullName>
    <label>Corrective Distribution_Match</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>