force-app/main/default/objects/Compliance__c/fields/Corrective_Distribution_Pre_Tax__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Distribution_Pre_Tax__c</fullName>
    <label>Corrective Distribution_Pre-Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>