force-app/main/default/objects/Compliance__c/fields/Corrective_Distributions_8e__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Distributions_8e__c</fullName>
    <description>Certain deemed and/or corrective distributions)</description>
    <inlineHelpText>Certain deemed and/or corrective distributions)</inlineHelpText>
    <label>Corrective Distributions (8e)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>