force-app/main/default/objects/Compliance__c/fields/Create_Ancillary_Billing__c.field-meta.xml
<CustomField>
    <fullName>Create_Ancillary_Billing__c</fullName>
    <label>Create Ancillary Billing</label>
    <type>Date</type>
</CustomField>