force-app/main/default/objects/Compliance__c/fields/Current_Status_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Timestamp__c</fullName>
    <label>Current Status Timestamp</label>
    <length>40</length>
    <type>Text</type>
</CustomField>