force-app/main/default/objects/Compliance__c/fields/Date_of_Last_Favorable_Det_Letter_17d__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Favorable_Det_Letter_17d__c</fullName>
    <description>If the plan is an individually-designed plan and received a favorable determination letter from the IRS, enter the date of the plan’s last favorable determination letter</description>
    <inlineHelpText>If the plan is an individually-designed plan and received a favorable determination letter from the IRS, enter the date of the plan’s last favorable determination letter</inlineHelpText>
    <label>Date of Last Favorable Det. Letter (17d)</label>
    <type>Date</type>
</CustomField>