force-app/main/default/objects/Compliance__c/fields/Date_of_Last_Required_Amendment_17b__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Required_Amendment_17b__c</fullName>
    <description>Date the last plan amendment/restatement for the required tax law changes was adopted</description>
    <inlineHelpText>Date the last plan amendment/restatement for the required tax law changes was adopted</inlineHelpText>
    <label>Date of Last Required Amendment (17b)</label>
    <type>Date</type>
</CustomField>