force-app/main/default/objects/Compliance__c/fields/DB_Plan_minimum_funding_412_or_302__c.field-meta.xml
<CustomField>
    <fullName>DB_Plan_minimum_funding_412_or_302__c</fullName>
    <description>Is this a defined contribution plan subject to the minimum funding requirements of section 412 of the Code or section 302 of ERISA?</description>
    <inlineHelpText>Is this a defined contribution plan subject to the minimum funding requirements of section 412 of the Code or section 302 of ERISA?</inlineHelpText>
    <label>DB Plan Minimum Funding 412 or 302 (12)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>