force-app/main/default/objects/Compliance__c/fields/DB_Plan_subject_to_minimum_funding_11a__c.field-meta.xml
<CustomField>
    <fullName>DB_Plan_subject_to_minimum_funding_11a__c</fullName>
    <description>Is this a defined benefit plan subject to minimum funding requirements?</description>
    <inlineHelpText>Is this a defined benefit plan subject to minimum funding requirements?</inlineHelpText>
    <label>DB Plan Subject to Minimum Funding (11a)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>