force-app/main/default/objects/Compliance__c/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <description>Enter DBA name</description>
    <inlineHelpText>Enter DBA name</inlineHelpText>
    <label>DBA Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>