force-app/main/default/objects/Compliance__c/fields/Determination_Date__c.field-meta.xml
<CustomField>
    <fullName>Determination_Date__c</fullName>
    <description>Date of Determination</description>
    <inlineHelpText>Date of Determination</inlineHelpText>
    <label>Determination Date</label>
    <type>Date</type>
</CustomField>