force-app/main/default/objects/Compliance__c/fields/DFVC_Filing__c.field-meta.xml
<CustomField>
    <fullName>DFVC_Filing__c</fullName>
    <label>DFVC Filing</label>
    <type>Date</type>
</CustomField>