force-app/main/default/objects/Compliance__c/fields/DOL_Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>DOL_Filing_Status__c</fullName>
    <description>DOL Filing Status</description>
    <inlineHelpText>DOL Filing Status</inlineHelpText>
    <label>DOL Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Imported</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>