force-app/main/default/objects/Compliance__c/fields/DOL_Status__c.field-meta.xml
<CustomField>
    <fullName>DOL_Status__c</fullName>
    <description>DOL Status for Prior Year 5500</description>
    <inlineHelpText>DOL Status for Prior Year 5500</inlineHelpText>
    <label>DOL Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>