force-app/main/default/objects/Compliance__c/fields/DOL_Status_Final__c.field-meta.xml
<CustomField>
    <fullName>DOL_Status_Final__c</fullName>
    <description>DOL Filing Status for Final 5500</description>
    <inlineHelpText>DOL Filing Status for Final 5500</inlineHelpText>
    <label>DOL Status _ Final</label>
    <length>18</length>
    <type>Text</type>
</CustomField>