force-app/main/default/objects/Compliance__c/fields/Draft_Form_5500__c.field-meta.xml
<CustomField>
    <fullName>Draft_Form_5500__c</fullName>
    <label>Draft Form 5500</label>
    <type>Date</type>
</CustomField>