force-app/main/default/objects/Compliance__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date 5500 is due - used for merge templates</description>
    <inlineHelpText>Date 5500 is due - used for merge templates</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>