force-app/main/default/objects/Compliance__c/fields/Due_Date_Final__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Final__c</fullName>
    <description>Date Final 5500 is due - used for merge templates</description>
    <inlineHelpText>Date Final 5500 is due - used for merge templates</inlineHelpText>
    <label>Due Date Final</label>
    <type>Date</type>
</CustomField>