force-app/main/default/objects/Compliance__c/fields/Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Date__c</fullName>
    <description>For scheduled email sends</description>
    <label>Email Date</label>
    <type>Date</type>
</CustomField>