force-app/main/default/objects/Compliance__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <label>Email Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan is Top Heavy – with forfeitures</fullName>
            </value>
            <value>
                <fullName>Plan is Top Heavy – with/out forfeitures</fullName>
            </value>
            <value>
                <fullName>Plan is not Top Heavy – with forfeitures</fullName>
            </value>
            <value>
                <fullName>Plan is not Top Heavy – with/out forfeitures</fullName>
            </value>
            <value>
                <fullName>Plan is Top Heavy – Initial PY and Next PY with forfeitures</fullName>
            </value>
            <value>
                <fullName>Plan is Top Heavy – Initial PY and Next PY with/out forfeitures</fullName>
            </value>
            <value>
                <fullName>Plan is Top Heavy Initial PY and not Next PY with forfeitures</fullName>
            </value>
            <value>
                <fullName>Plan is Top Heavy Initial PY and not Next PY with/out forfeitures</fullName>
            </value>
            <value>
                <fullName>Fee Increase Single K</fullName>
            </value>
            <value>
                <fullName>Fee Increase Simply</fullName>
            </value>
            <value>
                <fullName>Fee Increase Other</fullName>
            </value>
            <value>
                <fullName>Fee Increase RK Single K</fullName>
            </value>
            <value>
                <fullName>Fee Increase Single K Correction</fullName>
            </value>
            <value>
                <fullName>Fee Increase Other Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>