force-app/main/default/objects/Compliance__c/fields/Employer_Identification_Number_EIN__c.field-meta.xml
<CustomField>
    <fullName>Employer_Identification_Number_EIN__c</fullName>
    <formula>Account__r.Employer_Identification_Number_EIN__c</formula>
    <label>EIN</label>
    <type>Text</type>
</CustomField>