force-app/main/default/objects/Compliance__c/fields/End_of_Year_Participant_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>End_of_Year_Participant_Loan_Amount__c</fullName>
    <description>Enter the total of participant loans at the end of the year</description>
    <inlineHelpText>Enter the total of participant loans at the end of the year</inlineHelpText>
    <label>End of Year Participant Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>