force-app/main/default/objects/Compliance__c/fields/Excludable_ADP_P_F__c.field-meta.xml
<CustomField>
    <fullName>Excludable_ADP_P_F__c</fullName>
    <label>Excludable ADP P/F</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
            <value>
                <fullName>NOT RUN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>