force-app/main/default/objects/Compliance__c/fields/Failure_to_provide_due_benefits_10f__c.field-meta.xml
<CustomField>
    <fullName>Failure_to_provide_due_benefits_10f__c</fullName>
    <description>Has the plan failed to provide any benefit when due under the plan?</description>
    <inlineHelpText>Has the plan failed to provide any benefit when due under the plan?</inlineHelpText>
    <label>Failure to Provide Due Benefits (10f)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>