force-app/main/default/objects/Compliance__c/fields/Fidelity_Bond_10c__c.field-meta.xml
<CustomField>
    <fullName>Fidelity_Bond_10c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the plan have a fidelity bond?</description>
    <inlineHelpText>Did the plan have a fidelity bond?</inlineHelpText>
    <label>Fidelity Bond (10c)</label>
    <type>Checkbox</type>
</CustomField>