force-app/main/default/objects/Compliance__c/fields/Filing_Complete__c.field-meta.xml
<CustomField>
    <fullName>Filing_Complete__c</fullName>
    <inlineHelpText>Date 5500 Current year filing is complete</inlineHelpText>
    <label>Filing Complete</label>
    <type>Date</type>
</CustomField>