force-app/main/default/objects/Compliance__c/fields/Filing_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Filing_Record_ID__c</fullName>
    <description>Filing Record ID number</description>
    <inlineHelpText>Filing Record ID number</inlineHelpText>
    <label>Filing Record ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>