force-app/main/default/objects/Compliance__c/fields/FinalFilingInd__c.field-meta.xml
<CustomField>
    <fullName>FinalFilingInd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Final filing; company terminated</description>
    <label>FinalFilingInd</label>
    <type>Checkbox</type>
</CustomField>