force-app/main/default/objects/Compliance__c/fields/First_Year_Audit__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Year Audit</label>
    <type>Checkbox</type>
</CustomField>