force-app/main/default/objects/Compliance__c/fields/Forfeiture_Balance__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Balance__c</fullName>
    <label>Forfeiture Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>