force-app/main/default/objects/Compliance__c/fields/Form_5500EZ_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Form_5500EZ_Delivered__c</fullName>
    <description>Date 5500EZ was delivered to client</description>
    <inlineHelpText>Date 5500EZ was delivered to client</inlineHelpText>
    <label>Form 5500EZ Delivered</label>
    <type>Date</type>
</CustomField>