force-app/main/default/objects/Compliance__c/fields/Form_5558__c.field-meta.xml
<CustomField>
    <fullName>Form_5558__c</fullName>
    <label>Form 5558</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>