force-app/main/default/objects/Compliance__c/fields/Form_5558_Fee__c.field-meta.xml
<CustomField>
    <fullName>Form_5558_Fee__c</fullName>
    <label>Form 5558 Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>