force-app/main/default/objects/Compliance__c/fields/Form_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Form_Identifier__c</fullName>
    <description>Form identifier</description>
    <label>Form Identifier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>