force-app/main/default/objects/Compliance__c/fields/Form_Identifier_Final__c.field-meta.xml
<CustomField>
    <fullName>Form_Identifier_Final__c</fullName>
    <description>Form Identifier for Final 5500</description>
    <inlineHelpText>Form Identifier for Final 5500</inlineHelpText>
    <label>Form Identifier_Final</label>
    <length>30</length>
    <type>Text</type>
</CustomField>